# gestures_recognition

./: .gitignore  README.md
cv2/: README.md  instalacjatflite.md  main.cpp  wiecejczegosodczata.md
imu/: CMakeLists.txt  README.md  dir_offline.py  dupa.csv  dupa.txt  runner.py  struktura.txt  wynik.txt
imu/data/: left1.csv  left10.csv  left2.csv  left3.csv  left4.csv  left5.csv  left6.csv  left7.csv  left8.csv  left9.csv
imu/data/data2025-11-15_17-54-11/: backward2.csv  backward3.csv
imu/data/old/: down1.csv  down2.csv  down3.csv  left1.csv  left2.csv  left3.csv  left4.csv  right1.csv  right2.csv  right3.csv  right4.csv  up1.csv  up2.csv  up3.csv
imu/data/old2/: left1.csv  left2.csv  left4.csv  right2.csv  right3.csv  right4.csv  right5.csv
imu/include/: logger.hpp
imu/include/bno/: gesture_dir.hpp  sh2_enable.hpp  sh2_reports.hpp  shtp.hpp
imu/src/: imu_dir.cpp  imu_read.cpp  imu_status.cpp  sh2_parser.cpp  shtp_linux_i2c.cpp
imu_rust/: Cargo.toml  DOKUMENTACJA.md  README-dev.md  README-tools.md  dir_classifier.py  test_logger.py
imu_rust/docs/: ARCHITEKTURA_IMU.md
imu_rust/src/: imu.rs  lib.rs  main.rs
