[package]
name = "imu_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Zestaw spójny na embedded-hal 0.2.x (bez konfliktów traitów)
bno080 = { version = "0.1.3" }
linux-embedded-hal = "0.3.2"
embedded-hal = "0.2.7"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"

